Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 Jose Kahan (jose@w3.org) (February 06, 2003)
  Added a protection against the use of the nonsequential messaging option
  when hypermail wasn't compiled with the libfnv.

 Kent Landfield (kent@hypermail.org) (February 06, 2003)
  Hypermail 2.1.6 runs on a DEC Alpha running TRU64 when compiled
  with GCC 2.95. It does however require the -mieee flag be set for the
  trionan.c sources.  
   - Modified configure.in script to support setting the the -mieee flag
     for an Alpha TRU64 build.
   - Modified various Makefile.in files to assure clean/clobber/distclean 
     worked universally.  

 Peter McCluskey (Feb 1, 2003)
  Changes to make stack overflow less common.

 Peter McCluskey (January 29, 2003)
  Fixed faulty freeing of memory that caused core dump with files_by_thread
 option.
  Fixed missing function call argument with files_by_thread option. I suspect
 this was causing some random behavior, but I only found it due to valgrind.
  Fix for placement of link to next msg with incremental update, usetable = 0.

 Peter McCluskey (January 28, 2003)
  Fix from Zvi Har'El to leading zeroes in anchors in index pages with
 indextable=0.
  Changes to Swedish from Peter Karlsson.

 Peter McCluskey (January 26, 2003)
  Fix for placement of link to next msg with incremental update.

 Peter McCluskey (January 24, 2003)
  Release version 2.1.6 tar file.
  Fix buffer overflow when progress = 2 (triggered by long attachment
 names). Was a security risk.
  Fix buffer overflow in mail (cgi) program that probably created security
 risk if gethostbyaddr returned h_name of about 80 chars for an ip address.
 Disabled the functionality of the mail program and replaced it by default
 with warning about abuse by spammers. Added warnings about use of program.
  Change size of boundbuffer (in parse.c) to 256, limit sscanf that fills it
 to 255 bytes. This prevents a buffer overflow with long mime boundaries. The